--- a/README
+++ b/README
@@ -9,7 +9,7 @@ will not be re-fiddled, so running this multiple times shouldn't hurt)
 
 === Dependencies:
 
-* sudo port install soundtouch id3lib ruby rb-rubygems
+* sudo port install lame soundtouch id3lib ruby rb-rubygems
 ** (you can get MacPorts from http://www.macports.org/, which'll make the port command work)
 * sudo gem install activesupport rb-appscript
 
