update README with updated instructions to install dependencies (sox)

--- a/README
+++ b/README
@@ -8,13 +8,18 @@ Increase the tempo of all tracks in the 'Podcasts' playlist in iTunes
 will not be re-fiddled, so running this multiple times shouldn't hurt)
 
 === Dependencies:
+```
+$ brew install sox id3lib
+$ sudo gem install activesupport rb-appscript id3lib-ruby
+```
+** (you can get Homebrew from http://mxcl.github.io/homebrew/, which'll make the ```brew```command work)
 
-* sudo port install lame soundtouch id3lib ruby rb-rubygems
-** (you can get MacPorts from http://www.macports.org/, which'll make the port command work)
-* sudo gem install activesupport rb-appscript id3lib-ruby
 
 === Install:
 
 Put this somewhere sensible (like ~/bin/change_tempo) and run it regularly, by, say:
+```
   crontab -e
-  15 3 * * * ~/bin/change_tempo --speedup 20 --playlist new-podcasts > ~/log/change_tempo.log
+  15 3 * * * ~/bin/change_tempo.rb --speedup 20 --playlist new-podcasts > ~/log/change_tempo.log
+```
+
